# Humanoid-robot-interaction-train-ticket-checker

./: README.md
final_project/: Readme.txt
final_project/detection/: CMakeLists.txt  ReadMe_Cong  package.xml
final_project/detection/include/detection/: detection.h
final_project/detection/launch/: darknet_ros_bottom.launch
final_project/speech/: CMakeLists.txt  Readme_Chengjie.txt  package.xml
final_project/speech/launch/: cao.launch  cong.launch  yuan.launch
final_project/speech/msg/: face_area.msg  localizationmsgs.msg
final_project/speech/scripts/: congwalk.py  downhead.py  face_recog.py  hand_operation.py  poseinit.py  preSpeechServer.py  pre_grasp.py  risehead.py  shakehead.py
final_project/speech/src/: main.cpp  marker_dect.cpp
final_project/speech/srv/: localization.srv
final_project/using_markers/: CMakeLists.txt  Readme_Yansong.txt  package.xml
final_project/using_markers/include/using_markers/: drawDest.h  navi.h  tfObstacle.h
final_project/using_markers/launch/: map.launch
final_project/using_markers/msg/: arucomsgs.msg  detectPose.msg
final_project/using_markers/rviz/: groupA.rviz
final_project/using_markers/src/: drawDest.cpp  navi3.cpp  tf_broadcaster.cpp
final_project/using_markers/srv/: dest.srv  destination.srv  localization.srv  obstacleDetect.srv  walk_polar.srv
tutorial2/: CMakeLists.txt  package.xml
tutorial2/src/: tutorial_2.cpp
tutorial3/: tutorial_3.cpp
tutorial4/: tutorial_4.cpp
tutorial5/: CMakeLists.txt  ReadMe.txt  package.xml
tutorial5/launch/: client.launch  nao.launch
tutorial5/script/: move_service.py
tutorial5/src/: client2.cpp
tutorial5/srv/: MoveJoints.srv
tutorial6/: CMakeLists.txt  readme.txt
tutorial6/launch/: nao.launch
tutorial6/rviz/: marker_tf.rviz
tutorial6/script/: move_service.py
tutorial6/src/: client.cpp
tutorial6/srv/: coordinate.srv
tutorial7/: CMakeLists.txt  readme.txt
tutorial7/launch/: nao3.launch
tutorial7/src/: main.cpp
